<resources>
    <string name="app_name">KotlinGetPost</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Nama</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="no_hp">no hp</string>
    <string name="register">Register</string>
    <string name="job">job</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
