<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PostKotlin">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:text="@string/nama" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/name"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:text="@string/email" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/email"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:text="@string/password" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/password"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:text="@string/no_hp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/phone"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <Button
                android:id="@+id/submit"
                android:text="@string/register"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_width="100dp"
                android:layout_height="40dp"/>
    </LinearLayout>

</FrameLayout>